Making progress on the form. Correcting image viewing bug on mobile.

--- a/src/public/gallery/gallery.css
+++ b/src/public/gallery/gallery.css
@@ -62,9 +62,11 @@
 .modal img {
     height: auto;
     max-height: 90vh;
+    max-width: 90vw;
+    margin-top: 4%;
 }
 
-.modal button {
+.close-gallery-modal {
     background: none;
     border: none;
     color: white;
